# ibkrbot

./: .gitignore  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
config/: live.example.yaml  paper.example.yaml  paper.ibkr.example.yaml
docs/: END_OF_DAY.md  RUNBOOK_PAPER_IBKR.md  STATUS.md  TRIAL_DAY0.md
run/: paper.ibkr.port7497.cid1.yaml  paper.ibkr.port7497.yaml  pip_freeze.txt  trader.sqlite-shm  trader.sqlite-wal
run/trials/exports/: 20260109_122255_MGC_orb_variant_a_bot1_bars_1m.csv  20260109_122255_MGC_orb_variant_a_bot1_strategy_daily.csv  (+7 more)
tests/: test_bus.py  test_config_orders.py  test_config_parse_samples.py  test_custom_spec_strategy.py  test_db_bars.py  test_db_orders.py  test_db_strategy_daily.py  test_export_creates_files.py  test_flatten_cli.py  test_ibkr_bars_snapshot.py  test_ibkr_event_classify.py  test_ledger_pnl.py  test_market_data.py  test_migrations.py  test_orb_variant_a_signals.py  test_reconcile.py  test_trade_shadow.py  test_trading_disabled.py  test_trial_cli.py
trader/: __main__.py  _path_hint.txt  bus.py  config.py  events.py  logging_setup.py  main.py  market_data.py  models.py  reconcile.py
trader/broker/: __init__.py  base.py  sim.py
trader/broker/ibkr/: __init__.py  (+1 more)
trader/journal/: __init__.py  analytics.py  daily.py  trade_tracker.py
trader/ledger/: __init__.py  ledger.py
trader/persistence/: __init__.py  db.py  schema.sql
trader/reporting/: daily_report.py
trader/risk/: __init__.py  limits.py
trader/strategy/: __init__.py  base.py  custom_spec.py  noop.py  orb_variant_a.py
(+1 files in other folders)
